--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "bun-example",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "build": "bun build src/index.ts --outdir ./dist --target bun",
+    "start": "bun run src/index.ts",
+    "start-build": "bun run dist/index.js"
   },
   "dependencies": {
     "hono": "^4.7.9"
