--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ortelius-api-v2  # Production repository
+        ECR_REPOSITORY: bun-example # Production repository
         IMAGE_TAG: ${{ github.ref_name }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -45,7 +45,7 @@ jobs:
       if:  github.ref == 'refs/heads/master'
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ortelius-api-v2 # Or separate repo for master
+        ECR_REPOSITORY: bun-example # Or separate repo for master
         IMAGE_TAG: ${{ steps.short-sha.outputs.short_sha }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
